homework_14.5(NetworkPolicies)/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-node
spec:
  ports:
    - name: web
      port: 8080
  selector:
    app: hello-node
---
apiVersion: v1
kind: Service
metadata:
  name: multitool
spec:
  ports:
    - name: web
      port: 80
  selector:
    app: multitooltest
