homework_14.5(NetworkPolicies)/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
spec:
  podSelector:
    matchLabels:
      app: hello-node
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: multitooltest
      ports:
      - protocol: TCP
        port: 80
